# chatbot

./: .env.example  .gitattributes  .gitignore  Chatbot.slnx  Directory.Build.props  Directory.Packages.props  PIPELINES.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
data/seed/: test-questions.json
docs/: ARCHITECTURE.md  ChatbotDb.drawio  DATABASE.md  ERD.drawio  FRONTEND-INTEGRATION.md  RESEARCH-REPORT.md
ml/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
ml/app/: __init__.py  chunking.py  config.py  embedding.py  evaluation.py  main.py  models_registry.py  parsing.py  schemas.py  security.py
ml/tests/: test_chunking.py  test_smoke.py
src/Chatbot.Api/: Chatbot.Api.csproj  Chatbot.Api.http  DependencyInjection.cs  Program.cs  appsettings.Development.json  appsettings.json
src/Chatbot.Api/Authentication/: CurrentUser.cs  HangfireDashboardAuthFilter.cs  PasswordChangeGateMiddleware.cs  (+1 more)
src/Chatbot.Application/: Chatbot.Application.csproj  DependencyInjection.cs
src/Chatbot.Domain/: Enums.cs
src/Chatbot.Infrastructure/: Chatbot.Infrastructure.csproj  DependencyInjection.cs
tests/Chatbot.Api.Tests/: Chatbot.Api.Tests.csproj  PermissionAttributeTests.cs
tests/Chatbot.Application.Tests/: AnswerLanguagePolicyTests.cs  Chatbot.Application.Tests.csproj  FileTypePolicyTests.cs  PermissionMatrixTests.cs
tests/Chatbot.Domain.Tests/: Chatbot.Domain.Tests.csproj  RefreshTokenTests.cs
tests/Chatbot.Integration.Tests/: Chatbot.Integration.Tests.csproj  ConverterTests.cs  SchemaCascadeTests.cs
(+124 files in other folders)
